--- a/assets/css/header-section.css
+++ b/assets/css/header-section.css
@@ -1,5 +1,4 @@
 .bg-image-container * {
-  font-family: "Montserrat", sans-serif;
   text-align: center;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -28,8 +27,6 @@
 .header-section {
   margin-bottom: -200px;
   padding-bottom: 0px;
-  padding-left: 5px;
-  padding-right: 5px;
 }
 .buttons-container {
   display: flex;
@@ -74,6 +71,9 @@
   }
 }
 @media screen and (min-width: 768px) {
+  .text-heading {
+    font-size: 1.2rem;
+  }
   .bg-image-container {
     padding-top: 73px;
     background-image: url("../images/food_image.jpg");
@@ -104,7 +104,6 @@
   }
   .main-btn {
     border-color: var(--main-color);
-    margin-right: 50px;
   }
 }
 @media screen and (min-width: 1200px) {
