Add info about app section

--- a/style.css
+++ b/style.css
@@ -3,3 +3,4 @@
 @import "./assets/css/common.css";
 @import "./assets/css/header.css";
 @import "./assets/css/header-section.css";
+@import "./assets/css/info-about-app.css";
