--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-@import "./assets/css/reset.css";
-@import "./assets/css/bootstrap-grid.css";
-@import "./assets/css/common.css";
-@import "./assets/css/header.css";
-@import "./assets/css/header-section.css";
-@import "./assets/css/info-about-app.css";
+@import "/assets/css/reset.css";
+@import "/assets/css/bootstrap-grid.css";
+@import "/assets/css/common.css";
+@import "/assets/css/header.css";
+@import "/assets/css/header-section.css";
+@import "/assets/css/info-about-app.css";
+@import "/assets/css/footer-section.css";
