--- a/style.css
+++ b/style.css
@@ -5,3 +5,4 @@
 @import "/assets/css/header-section.css";
 @import "/assets/css/info-about-app.css";
 @import "/assets/css/footer-section.css";
+@import "/assets/css/page-footer.css";
