--- a/assets/css/header-section.css
+++ b/assets/css/header-section.css
@@ -6,6 +6,11 @@
 .bg-image-container {
   padding-bottom: 50px;
 }
+.text-heading,
+.text-sub-heading {
+  padding-left: 5px;
+  padding-right: 5px;
+}
 .text-heading {
   font-size: 12px;
   color: var(--secondary-color);
@@ -15,7 +20,6 @@
   font-weight: 700;
   line-height: 42px;
   color: var(--black-color);
-  letter-spacing: -2px;
   font-size: 2rem;
 }
 .download-info-text {
@@ -99,7 +103,7 @@
   }
   .right-phone-img {
     left: 50%;
-    top: 134%;
+    top: 150%;
     width: inherit;
   }
   .main-btn {
