Add overflow rules

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 :root {
   --bg-color: #fafafa;
@@ -9,4 +9,15 @@
 }
 .ta-center {
   text-align: center;
+}
+.multiline-overflow {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+}
+.overflow {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
