--- a/assets/css/page-footer.css
+++ b/assets/css/page-footer.css
@@ -1,7 +1,7 @@
 .page-footer {
   padding: 20px 30px;
 }
-.copyright{
+.copyright {
   opacity: 0.7;
 }
 .img-link {
@@ -20,7 +20,7 @@
   .page-footer {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
   .links {
     padding-bottom: 0px;
