--- a/assets/css/info-about-app.css
+++ b/assets/css/info-about-app.css
@@ -41,6 +41,9 @@
   .shop {
     flex-direction: row;
   }
+  .horizontal-break {
+    width: 75%;
+  }
   .info-about-app > * {
     max-width: 50%;
   }
