--- a/assets/css/footer-section.css
+++ b/assets/css/footer-section.css
@@ -14,6 +14,9 @@
 .fs-sub-heading {
   opacity: 0.5;
 }
+.link-reset {
+  padding: 0px;
+}
 .fs-btn {
   padding: 15px 15px;
   border-radius: 10px;
@@ -30,7 +33,7 @@
 }
 @media screen and (min-width: 768px) {
   .footer-section {
-    background-image: url("/assets/images/footer-bg.jpg");
+    background-image: url('/assets/images/footer-bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
