--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,16 +1,25 @@
 .page-header {
-  display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
 }
 .image-wrapper {
-  width: 95px;
-  /* width: 250px;
-  height: 100px; */
+  width: 100px;
+}
+.btn-reset {
+  color: initial;
+  background: initial;
+  border: initial;
+  padding: 0;
+  cursor: pointer;
 }
 .image {
   object-fit: contain;
   width: inherit;
   height: inherit;
+}
+@media screen and (min-width: 768px) {
+  .image-wrapper {
+    width: 250px;
+  }
 }
