--- a/assets/css/page-footer.css
+++ b/assets/css/page-footer.css
@@ -2,10 +2,12 @@
   padding: 20px 30px;
 }
 .copyright {
+  font-size: 14px;
   opacity: 0.7;
+  padding: 10px 0;
 }
 .img-link {
-  padding: 15px;
+  margin: 0px 10px;
 }
 .links {
   padding-bottom: 20px;
@@ -18,7 +20,6 @@
 }
 @media screen and (min-width: 768px) {
   .page-footer {
-    display: flex;
     align-items: center;
     justify-content: space-between;
   }
