--- a/assets/css/info-about-app.css
+++ b/assets/css/info-about-app.css
@@ -64,3 +64,9 @@
     padding-left: 5px;
   }
 }
+@media screen and (min-width: 1400px) {
+  .info-about-app {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
